@@ -23,7 +23,7 @@
 /*
  * Object instance holds many common fields that most
  * gnucash objects use.
- * 
+ *
  * Copyright (C) 2003 Linas Vepstas <linas@linas.org>
  */
 
@@ -51,7 +51,7 @@ qof_instance_create (QofIdType type, QofBook *book)
 	return inst;
 }
 
-void 
+void
 qof_instance_init (QofInstance *inst, QofIdType type, QofBook *book)
 {
 	QofCollection *col;
@@ -68,7 +68,7 @@ qof_instance_init (QofInstance *inst, QofIdType type, QofBook *book)
 	qof_entity_init (&inst->entity, type, col);
 }
 
-void 
+void
 qof_instance_release (QofInstance *inst)
 {
 	kvp_frame_delete (inst->kvp_data);
@@ -85,14 +85,14 @@ qof_instance_get_guid (QofInstance *inst)
 	return &inst->entity.guid;
 }
 
-QofBook * 
+QofBook *
 qof_instance_get_book (QofInstance *inst)
 {
 	if (!inst) return NULL;
 	return inst->book;
 }
 
-KvpFrame* 
+KvpFrame*
 qof_instance_get_slots (QofInstance *inst)
 {
   if (!inst) return NULL;
@@ -102,15 +102,15 @@ qof_instance_get_slots (QofInstance *inst)
 Timespec
 qof_instance_get_last_update (QofInstance *inst)
 {
-	if (!inst) 
+	if (!inst)
 	{
-		Timespec ts = {0,-1}; 
+		Timespec ts = {0,-1};
 		return ts;
 	}
 	return inst->last_update;
 }
 
-int 
+int
 qof_instance_version_cmp (QofInstance *left, QofInstance *right)
 {
 	if (!left && !right) return 0;
@@ -126,30 +126,22 @@ qof_instance_version_cmp (QofInstance *left, QofInstance *right)
 gboolean
 qof_instance_is_dirty (QofInstance *inst)
 {
-	QofBook *book;
 	QofCollection *coll;
-	QofEntity *ent;
 
 	if (!inst) { return FALSE; }
-	ent = &inst->entity;
-	book = qof_instance_get_book(inst);
-	coll = qof_book_get_collection(book, ent->e_type);
+	coll = inst->entity.collection;
 	if(qof_collection_is_dirty(coll)) { return inst->dirty; }
 	inst->dirty = FALSE;
 	return FALSE;
 }
 
-void 
+void
 qof_instance_set_dirty(QofInstance* inst)
 {
-	QofBook *book;
 	QofCollection *coll;
-	QofEntity *ent;
 
 	inst->dirty = TRUE;
-	ent = &inst->entity;
-	book = qof_instance_get_book(inst);
-	coll = qof_book_get_collection(book, ent->e_type);
+	coll = inst->entity.collection;
 	qof_collection_mark_dirty(coll);
 }
 
@@ -182,7 +174,7 @@ qof_instance_mark_clean (QofInstance *inst)
   inst->dirty = FALSE;
 }
 
-void 
+void
 qof_instance_set_slots (QofInstance *inst, KvpFrame *frm)
 {
   if (!inst) return;
